# dpcpp_tools

./: .gitignore  CMakeLists.txt  README.md  dump.dot  save.txt
data/: env_xpti.sh  setup.txt
debug_tool/: CMakeLists.txt
debug_tool/src/: debug_tool.cpp
dump_exec_graph/: CMakeLists.txt  main.cpp
dump_exec_graph/include/: edge.h  exec_graph.h  node.h
dump_exec_graph/src/: edge.cpp  exec_graph.cpp  exec_graph_tool.cpp  xpti_set_up.cpp
example/: 1_iter.dot  2_iter.dot  a.out  jacobi.cpp  run  three_vector_ops.cpp  vector_ops.cpp
example/sycl_int_dump_2/: graph_10before_addCopyBack.dot  graph_11after_addCopyBack.dot  graph_12before_addCopyBack.dot  graph_13after_addCopyBack.dot  graph_14before_addCopyBack.dot  graph_15after_addCopyBack.dot  graph_2before_addCG.dot  graph_3after_addCG.dot  graph_5after_addCopyBack.dot  graph_6before_addCG.dot  graph_7after_addCG.dot  graph_9after_addCG.dot
example/sycl_internal_graph_dump/: graph_10before_addCopyBack.dot  graph_11after_addCopyBack.dot  graph_12before_addCG.dot  graph_14before_addCG.dot  graph_15after_addCG.dot  graph_16before_addCopyBack.dot  graph_17after_addCopyBack.dot  graph_18before_addCG.dot  graph_19after_addCG.dot  graph_1after_addCG.dot  graph_21after_addCG.dot  graph_22before_addCopyBack.dot  graph_23after_addCopyBack.dot  graph_24before_addCG.dot  graph_25after_addCG.dot  graph_27after_addCG.dot  graph_28before_addCopyBack.dot  graph_29after_addCopyBack.dot  graph_30before_addCopyBack.dot  graph_31after_addCopyBack.dot  graph_32before_addCopyBack.dot  graph_33after_addCopyBack.dot  graph_3after_addCG.dot  graph_5after_addCopyBack.dot  graph_6before_addCG.dot  graph_7after_addCG.dot  graph_9after_addCG.dot
example/sycl_internal_graph_dump_1/: graph_2before_addCG.dot  graph_3after_addCG.dot  graph_5after_addCopyBack.dot  graph_6before_addCopyBack.dot  graph_7after_addCopyBack.dot  graph_8before_addCopyBack.dot  graph_9after_addCopyBack.dot
hotspots/: CMakeLists.txt  main.cpp
hotspots/src/: xpti_set_up.cpp
include/: demangle.h  exec_graph.h
patches/: 0001-XPTI-Change-copy_from-copy_to-metadata-from-ptr-to-d.patch  0001-XPTI-WA-for-mem-transfer-id-generation.patch  0001-XPTI-WA-for-signal-handling.patch  0001-XPTI-WA-for-unique-id-generation.patch  0001-signal-handling-investigation-1.patch
profiler/: CMakeLists.txt  main.cpp
profiler/include/: pi_api_collector.h  sycl_collector.h
profiler/src/: pi_api_collector.cpp  sycl_collector.cpp  xpti_set_up.cpp
samples/: jacobi.cpp  single_vector_op.cpp  two_vector_ops.cpp
src/: basic_collector.cpp  exec_graph_tool.cpp  foo.cpp
tools/: main.cpp
utils/: CMakeLists.txt  runner_utils.h  xpti_types.h  xpti_utils.cpp  xpti_utils.h
